
Version 1.1.0
-------------
(this is 1st version of new development series)

- new ability to save catalogs in all common CR/LF formats, plus
  an option to preserve file's format (default values: Unix and preserve)


Version 1.0.3
-------------

- fixed comments parsing bug (reported by Mattias Dahlberg)
- fixed ugly blinking when resizing poEdit window (Win32)


Version 1.0.2
-------------

- fixed problem with localized versions of gettext (Unix)
- fixed Content-Transfer-Encoding header (was "8-bit" instead of "8bit")
- fixed POT-Creation-Date and PO-Revision-Date date writing
- better handling of \n: strings with \n in them are now both
  displayed and saved to .po file as multiline records
- saving catalog now preserves comments
- fixed dist makefile target (Unix)


Version 1.0.1
-------------

- fixed loading of catalogs with multiline msgid records
- fixed assertion failure in parsers info saving if ~/.poedit
  did not exist [harmless, in debug builds only]
- right-clicking list control now selects the item under cursor
- fixed docs/Makefile.am to cd correctly (Unix)
- configure change: better check for wxWindows (Unix)
- fixed RPM spec file (Unix)
- added integration with KDE and GNOME desktops (Unix)


Version 1.0.0
-------------
- initial release