@@ -20,4 +20,3 @@
 - add i18n support to poEdit *itself*
 - multilines entries editing dlg
 - use Scintilla for syntax highlighting (\n, \r etc., spaces)
-- fullscreen mode (?)
