@@ -27,5 +27,11 @@
       <tooltip>Toggled if selected string has fuzzy translation</tooltip>
       <toggle>1</toggle>
     </object>
+    <object class="separator"/>
+    <object class="tool" name="menu_fullscreen">
+      <bitmap>fullscreen.gif</bitmap>
+      <tooltip>Fullscreen view</tooltip>
+      <toggle>1</toggle>
+    </object>
   </object>
 </resource>
