@@ -5,6 +5,7 @@ Version 1.1.0
 
 - new ability to save catalogs in all common CR/LF formats, plus
   an option to preserve file's format (default values: Unix and preserve)
+- added fullscreen mode
 
 
 Version 1.0.3
